Changes for adding Workbench.

--- a/MyLocalServiceConsoleHost/App.config
+++ b/MyLocalServiceConsoleHost/App.config
@@ -1,5 +1,8 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <configuration>
+  <configSections>
+    
+  </configSections>
     <system.diagnostics>
         <sources>
             <source name="System.ServiceModel.MessageLogging" switchValue="Warning,ActivityTracing">
